task management changes

--- a/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.html
+++ b/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.html
@@ -22,7 +22,7 @@
                 <mat-form-field class="description-field" appearance="outline">
                     <mat-label>Sub Task Description</mat-label>
                     <textarea formControlName="subTaskDescription" matInput rows="4" maxlength="10000"></textarea>
-                    <mat-error *ngIf="subTaskForm.get('subTaskDescription')!.hasError('required')"> Task Description is
+                    <mat-error *ngIf="subTaskForm.get('subTaskDescription')!.hasError('required')"> Sub Task Description is
                         required</mat-error>
                 </mat-form-field>
 
