--- a/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.scss
+++ b/src/app/taskmodule/sub-task-list/add-sub-task/add-sub-task.component.scss
@@ -33,7 +33,8 @@
 .sub-task-form {
   height: max-content;
   max-height: 85vh;
-  overflow-y: auto;
+  // overflow-y: auto;
+  overflow-y: visible;
 }
 
 .form-container {
