--- a/src/app/taskmodule/project-list/project-list.component.html
+++ b/src/app/taskmodule/project-list/project-list.component.html
@@ -36,7 +36,7 @@
                 <ng-container matColumnDef="projectName">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by projectName" class="nowrap"> Project Name </th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.projectname }} 
+                        {{ element.projectname | titlecase }} 
                     </td>
                 </ng-container>
 
