--- a/src/app/taskmodule/project-list/project-list.component.scss
+++ b/src/app/taskmodule/project-list/project-list.component.scss
@@ -11,6 +11,7 @@
 
 table {
   width: 100%;
+  table-layout: fixed;
 }
 
 .mat-mdc-header-row {
@@ -188,9 +189,9 @@ tbody {
   white-space: normal !important;
 }
 
-.nowrap {
-  white-space: nowrap;
-}
+// .nowrap {
+//   white-space: nowrap;
+// }
 
 .mat-mdc-header-row {
   height: 30px !important;
