--- a/src/app/taskmodule/task-list/add-task/add-task.component.scss
+++ b/src/app/taskmodule/task-list/add-task/add-task.component.scss
@@ -28,12 +28,14 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  // overflow-y: visible;
 }
 
 .task-form {
   height: max-content;
   max-height: 85vh;
-  overflow-y: auto;
+  // overflow-y: auto;
+  overflow-y: visible;
 }
 
 .form-container {
