consultant submissions and interviews table coulumns removal

--- a/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.scss
+++ b/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.scss
@@ -15,19 +15,10 @@
 
 .mat-column-SerialNum,
 .mat-column-Dos,
-.mat-column-HeadQuarter,
 .mat-column-submissionId,
-.mat-column-Consultant,
-.mat-column-TrackSI,
 .mat-column-Requirement,
-.mat-column-ImplementationPartner,
-.mat-column-EndClient,
-.mat-column-Vendor,
-.mat-column-SubRate,
 .mat-column-ProjectLocation,
-.mat-column-SubmittedBy,
-.mat-column-Status,
-.mat-column-SubStatus {
+.mat-column-Status {
     border-right: 1px solid lightgray;
 }
 
