banter report dailed spelling change

--- a/src/app/usit/components/reports/banter-report/banter-report.component.html
+++ b/src/app/usit/components/reports/banter-report/banter-report.component.html
@@ -180,7 +180,7 @@
                     mat-sort-header
                     sortActionDescription="Sort by DailedCalls"
                   >
-                    Dailed Calls
+                    Dialed Calls
                   </th>
                   <td mat-cell *matCellDef="let element">
                     {{ element.dialled }}
@@ -195,7 +195,7 @@
                     mat-sort-header
                     sortActionDescription="Sort by DailedInMinutes"
                   >
-                    Dailed In Minutes
+                    Dialed In Minutes
                   </th>
                   <td mat-cell *matCellDef="let element">
                     {{ element.minutes_Dialled }}
